# justfit

./: .gitignore  CHANGELOG.md  CLAUDE.md  FRONTEND_TODO.md  Makefile  README.md  TODO.md  app.go  electron-builder.json  go.mod  go.sum  main.go  manual.md  problems.md  pytest.ini  wails.json  问题清单.md
backend/: justfit_backend.spec  pyproject.toml  requirements-dev.txt  requirements.txt  start_no_reload.sh
backend/app/: __init__.py  config.py  main.py
backend/app/analyzers/: __init__.py  health.py  idle_detector.py  modes.py  resource_analyzer.py  rightsize.py  tidal.py  zombie.py
backend/app/connectors/: __init__.py  base.py  uis.py  vcenter.py
backend/app/core/: __init__.py  database.py  errors.py  logging.py  migration.py
backend/app/models/: __init__.py  finding.py  metric.py  report.py  resource.py  settings.py  task.py
backend/app/report/: __init__.py  builder.py  charts.py  excel.py  pdf.py
backend/app/report/charts/: __init__.py  base.py  constants.py  overview.py  vm_resource.py
backend/app/repositories/: __init__.py  base.py  connection.py  metric.py
backend/app/routers/: __init__.py  analysis.py  connection.py  report.py  resource.py  task.py
backend/app/schemas/: __init__.py  analysis.py  connection.py  health.py  idle.py  report.py  task.py
backend/app/security/: __init__.py  credentials.py
backend/app/services/: __init__.py  analysis.py  collection.py  connection.py  report.py  task.py
backend/scripts/: verify_uis_storage.py  verify_vcenter_storage.py
docs/: API.md  API_REFACTORING_REPORT.md  API_TEST_README.md  DEBUG_GUIDE.md  (+11 more)
(+278 files in other folders)
