[project]
name = "justfit-backend"
version = "0.0.3"
requires-python = ">=3.14"
description = "JustFit Backend - Cloud Platform Resource Assessment Tool"
authors = [
    {name = "JustFit Team"}
]
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.21",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyvmomi>=8.0",
    "httpx>=0.28",
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "cryptography>=44.0",
    "structlog>=24.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
